fix layout: KP-6882 Designer: layout problem on Compile errors and Warnings lists in reduced browser window

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
@@ -26,10 +26,8 @@
         min-width: 275px;
 
         .modal-header {                       
-            width: 100%;            
-            height: @verification-modal-header-hight;
-            .opensanslight-font();
-            font-size: 36px;
+            font-size: 36px;          
+            .opensanslight-font();            
             border-bottom: 2px solid @verification-modal-content-border-color;
 
              button.close {
@@ -47,7 +45,7 @@
                 span {
                     color: @verification-modal-error-color;
                 }
-                line-height: @verification-modal-header-hight - 8px;
+                line-height: 32px;
             }
         }
 
